--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,7 +3,7 @@ ext.versions = [
         minSdk: 19,
         targetSdk: 24,
         compileSdk: 24,
-        buildTools: "24.0.1",
+        buildTools: '24.0.3',
         name: buildVersionName,
         code: buildVersionCode(),
 
