--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - gradlew clean assembleDebug
+      - $CODEBUILD_SOURCE_REPO_URL/gradlew clean assembleDebug
   post_build:
     commands:
       - echo Build completed on `date`
