add 24.0.3 build-tools

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,7 @@ phases:
     commands:
       - echo  set execute on gradlew
       - chmod 755 gradlew
+      - sdkmanager build-tools;24.0.3
   build:
     commands:
       - echo Build started on `date`
