--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   pre_build:
     commands:
       - echo  set execute on gradlew
-      - /usr/local/android-sdk-linux/tools/bin/sdkmanager "build-tools;24.0.3"
+      - /usr/local/android-sdk-linux/tools/bin/android update sdk --no-ui --filter build-tools-24.0.3
   build:
     commands:
       - echo Build started on `date`
