--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,10 +10,9 @@ phases:
   pre_build:
     commands:
       - echo  set execute on gradlew
-      - ls -l /usr/local/android-sdk-linux
-      - ls -l /usr/local/android-sdk-linux/tools
+      - ls -l /usr/local/android-sdk-linux/tools/bin
       - android list sdk
-      - /usr/local/android-sdk-linux/tools/bin/android update sdk --no-ui --filter build-tools-24.0.3
+      - android update sdk --no-ui --filter build-tools-24.0.3
   build:
     commands:
       - echo Build started on `date`
