--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,7 +14,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - "./gradlew clean assembleDebug --debug"
+      - "./gradlew clean assembleDebug"
   post_build:
     commands:
       - echo Build completed on `date`
