--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectVersion=1.0
 
 sonar.sources=app/src/main/java
 sonar.tests=app/src/test/java
-
+sonar.java.binaries=app/build/intermediates/classes
 sonar.language=java
 
 sonar.junit.reportsPath=reports/junit
